--- a/theme.css
+++ b/theme.css
@@ -78,12 +78,9 @@
     hr.solid {
   		border: 0.25px solid #a0a0a0;}
 
-<style>
-	    table {
-  width: 100%;
-  border-collapse: collapse;;
-}
-	</style>
+    table {
+ 	width: 100%;
+ 	border-collapse: collapse;}
     
     footer {
   		text-align:center;
