--- a/theme.css
+++ b/theme.css
@@ -75,10 +75,10 @@
 		color: #233252;
 	text-decoration: none;}
 .nav ul li a:hover {
-  		color: #364043;
+  		color: #a0a0a0;
         text-decoration: none;}
 .nav ul li a:active {
-		color: #364043;
+		color: #a0a0a0;
         text-decoration: none;}
 
     hr.solid {
