--- a/theme.css
+++ b/theme.css
@@ -10,6 +10,7 @@
         font-size: 50px;
         padding-top: 20px;
         padding-bottom: 0px;
+	margin-bottom: 10px;
         font-family: EB Garamond;
         font-weight: 1000;}
     
@@ -61,20 +62,35 @@
         margin: 0;
     	padding: 0;
         overflow: hidden;
-    	display: inline-block;}
+    	display: inline-block;
+        text-decoration: none;}
     .nav ul li {
         margin: auto;
         padding: 10px;
-        float:left;}
-    .nav ul li a:hover:not(.active) {
-  		color: #364043;
+        float:left;
         text-decoration: none;}
-	.nav .active {
-		color: #b4cce8 ;
+.nav ul li a:link {
+		color: #233252;
+	text-decoration: none;}
+    .nav ul li a:visited {
+		color: #233252;
+	text-decoration: none;}
+.nav ul li a:hover {
+  		color: #a0a0a0;
         text-decoration: none;}
-    
+.nav ul li a:active {
+		color: #a0a0a0;
+        text-decoration: none;}
+
     hr.solid {
   		border: 0.25px solid #a0a0a0;}
+
+  .rectangle {
+  height: 1px;
+  width: 300px;
+  background-color: #b4cce8;
+	margin-left: auto;
+    margin-right: auto;}
 
     table {
  	width: 100%;
