--- a/theme.css
+++ b/theme.css
@@ -1,6 +1,5 @@
 	body {
-  		margin-left: 100px;
-        margin-right: 100px;
+  		margin: auto;
         background-color: white;
         font-family: EB Garamond, Raleway;}
 
