--- a/theme.css
+++ b/theme.css
@@ -45,7 +45,9 @@
         text-align: justify;
         font-size: 15px;
         font-family: Raleway;
-        line-height: 1.5;}
+        line-height: 1.5;
+	margin-left:10px;
+	margin-right:10px;}
 
 	.nav {
         position: relative;
