--- a/theme.css
+++ b/theme.css
@@ -3,6 +3,11 @@
         background-color: white;
         font-family: EB Garamond, Raleway;}
 
+	.header {
+	  background-color: white;
+	  padding: 20px;
+	  text-align: center;}
+
 	h1 {
 		color: #233252;
 		text-align: center;
@@ -110,6 +115,33 @@
         content: attr(data-th);
     }
 }
+
+.column {
+  float: left;
+  padding: 10px;
+}
+
+
+.column.side {
+  width: 12.5%;
+}
+
+
+.column.middle {
+  width: 75%;
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column.side, .column.middle {
+    width: 100%;
+  }
     
     footer {
   		text-align:center;
