--- a/theme.css
+++ b/theme.css
@@ -125,7 +125,10 @@ a:active {
 	margin-left: auto;
     margin-right: auto;}
 
- @media only screen and (max-width: 600px) {
+.table{table-layout: fixed;
+  width: 100%;} 
+
+@media only screen and (max-width: 600px) {
     thead th:not(:first-child) {
         display: none;}
 
@@ -160,5 +163,5 @@ a:active {
     
     footer {
   		text-align:center;
-        		color: #a0a0a0;
+        	color: #a0a0a0;
   		padding: 20px;}
