--- a/theme.css
+++ b/theme.css
@@ -125,8 +125,15 @@ a:active {
 	margin-left: auto;
     margin-right: auto;}
 
-.table{table-layout: fixed;
-  width: 100%;} 
+.grid-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-gap: 0px;
+  padding: 10px;}
+
+.grid-container > div {
+  text-align: center;
+  padding: 20px 20px;}
 
 @media only screen and (max-width: 600px) {
     thead th:not(:first-child) {
