--- a/theme.css
+++ b/theme.css
@@ -129,7 +129,8 @@ a:active {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-gap: 0px;
-  padding: 10px;}
+  padding: 10px;
+max-width: 600px;}
 
 .grid-container > div {
   text-align: center;
