--- a/theme.css
+++ b/theme.css
@@ -127,7 +127,7 @@ a:active {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 0px;
   padding: 10px;
 max-width: 700px;}
@@ -137,8 +137,14 @@ max-width: 700px;}
   padding: 0px 20px;}
 
 @media only screen and (max-width: 600px) {
-  grid-container {
+    thead th:not(:first-child) {
+        display: none;}
+
+    td, th {
         display: block;}
+
+    td[data-th]:before  {
+        content: attr(data-th);}
 }
 
 .column {
