--- a/theme.css
+++ b/theme.css
@@ -131,7 +131,7 @@ a:active {
   grid-gap: 0px;
   padding: 10px;
 max-width: 700px;
-align-content: center;}
+justify-content: center;}
 
 .grid-container > div {
   text-align: center;
