--- a/theme.css
+++ b/theme.css
@@ -130,8 +130,7 @@ a:active {
   grid-template-columns: 1fr 1fr;
   grid-gap: 0px;
   padding: 10px;
-max-width: 700px;
-justify-content: center;}
+max-width: 700px;}
 
 .grid-container > div {
   text-align: center;
