--- a/theme.css
+++ b/theme.css
@@ -127,8 +127,8 @@ a:active {
 
 
 .grid-container {
-  display: inline-grid;
-  grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 50% 50%;
   grid-gap: 0px;
   padding: 10px;
 max-width: 700px;}
