--- a/theme.css
+++ b/theme.css
@@ -174,3 +174,10 @@ max-width: 700px;}
   		text-align:center;
         	color: #a0a0a0;
   		padding: 20px;}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
