--- a/theme.css
+++ b/theme.css
@@ -181,7 +181,7 @@ max-width: 700px;}
   		padding: 20px;}
 
 .centered {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
