--- a/theme.css
+++ b/theme.css
@@ -181,9 +181,8 @@ max-width: 700px;}
   		padding: 20px;}
 
 .centered {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  Align-item:center;
 }
