--- a/theme.css
+++ b/theme.css
@@ -176,7 +176,7 @@ max-width: 700px;}
         	color: #a0a0a0;
   		padding: 20px;}
 
-.centered {
+.hero-text {
   position: absolute;
   top: 50%;
   left: 50%;
