--- a/theme.css
+++ b/theme.css
@@ -176,18 +176,9 @@ max-width: 700px;}
         	color: #a0a0a0;
   		padding: 20px;}
 
-.hero-text {
+.centered {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/IMG_7489.jpeg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 }
