--- a/theme.css
+++ b/theme.css
@@ -123,7 +123,14 @@ footer {
   	padding: 20px;}
 
 .centered {
+	}
+
+.float-right-lg {
 	position: absolute;
 	top: 50%;
  	left: 50%;
 	transform: translate(-50%, -50%);}
+	
+@media (min-width: 600px) {
+	.float-right-lg {
+	float: right;}
