--- a/theme.css
+++ b/theme.css
@@ -123,13 +123,13 @@ footer {
   	padding: 20px;}
 
 .centered {
-	}
-
-.float-right-lg {
 	position: absolute;
 	top: 50%;
  	left: 50%;
 	transform: translate(-50%, -50%);}
+
+.float-right-lg {
+	;}
 	
 @media (min-width: 600px) {
 	.float-right-lg {
