--- a/theme.css
+++ b/theme.css
@@ -123,7 +123,7 @@ footer {
   	padding: 20px;}
 
 .centered {
-	position: absolute;
+	position: relative;
 	top: 50%;
  	left: 50%;
 	transform: translate(-50%, -50%);}
